--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ img{
 
 body{
     background: #F4E1B1;
+    margin: 0;
     /*background-image: url(./images/Fondo.psd) repeat ;*/
 }
 
@@ -17,6 +18,11 @@ p{
    font-size: 17px;
    line-height: 25px;
    font-family: "Georgia", serif;
+}
+
+.container-all{
+    padding-left: 4%;
+    padding-right: 4%;
 }
 
 .intro{
@@ -33,16 +39,33 @@ p{
 .photo-specialise{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
     width: 100%;
+    padding-left: 3%;
 }
 
 .spe{
     width: 28%;
-
+    cursor: pointer;
+    padding-left: 2%;
+    /*vertical-align: middle;*/
 }
 
+.spe:hover{    
+    transition: all 0.5s ease; 
+    transform: translateY(-20px) scale(1.1);
+}
+
+h5:hover {
+    color:#C52039;
+}
+
+.spe
+h5{
+    margin: 0;
+    padding-bottom: 10%;
+}
 .container{
     width: 100%;
     display: flex;
@@ -59,6 +82,7 @@ ul{
     align-self: flex-end;
     text-align: right;
     padding-left: 0;
+    
     
 }
 
@@ -83,3 +107,94 @@ ul{
     transform-origin: bottom;
 }
 
+.title-projects{
+    text-align: center;
+    padding-top: 7%;
+    padding-bottom: 5%;
+    margin: 0;
+}
+
+.text-projects{
+    text-align: center;
+    font-size: 16px;
+    margin: 0;
+    padding-bottom: 6%;
+
+    
+    
+}
+
+.img-projects{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-around;
+    padding-bottom: 10%;
+}
+.poster{
+    width: 30%;
+}
+
+.footer{
+    margin: 0;
+    width: 100%;
+    height: 185px;
+    background: url('./images/header-down.png') bottom no-repeat #F4E1B1;
+    background-size: contain;
+}
+
+.text-footer{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.icono{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    
+}
+
+
+
+.text{ 
+    display: inline;
+    font-size: 13px;
+    line-height: 20px;
+    margin: 0;
+    padding-left: 5%;
+    
+}
+
+.text-contact{
+    font-size: 13px; 
+}
+
+.title-footer{
+    margin: 0;
+    font-size: 15px;
+    padding-bottom: 8%;  
+}
+
+.contact{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.social-media{
+    width: 50%;
+    display: flex;
+    justify-content: start;       
+}
+
+.social{
+    width: 15%;
+    align-content: flex-end;
+}
