--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ ul{
 .footer{
     margin: 0;
     width: 100%;
-    height: 185px;
+    min-height: 185px;
     background: url('./images/header-down.png') bottom no-repeat #F4E1B1;
     background-size: contain;
 }
@@ -149,7 +149,9 @@ ul{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    padding-top: 1%;
+    padding-bottom: 10%;
     
 }
 
@@ -157,44 +159,99 @@ ul{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    
+    padding-top: 5%;   
 }
-
-
 
 .text{ 
     display: inline;
     font-size: 13px;
     line-height: 20px;
     margin: 0;
-    padding-left: 5%;
-    
+    padding-left: 7%;   
 }
 
 .text-contact{
     font-size: 13px; 
+    text-align: center;
 }
 
-.title-footer{
+.title-footer1{
     margin: 0;
-    font-size: 15px;
-    padding-bottom: 8%;  
+    font-size: 16px;
+    padding-top: 10%;
+    padding-bottom: 10%; 
+    padding-left: 10%;
+    text-align: center;
+   
+}
+
+.title-footer2{
+    margin: 0;
+    font-size: 16px;
+    padding-top: 10%;
+    padding-bottom: 10%; 
+    padding-left: 10%;
+    text-align: start;
+   
 }
 
 .contact{
     width: 50%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     
 }
 
 .social-media{
     width: 50%;
     display: flex;
-    justify-content: start;       
+    justify-content: flex-end; 
+    padding-right: 5%;      
 }
 
 .social{
     width: 15%;
     align-content: flex-end;
+}
+
+.dracula-team{
+    border-radius: 100%;
+}
+.dracula-blood{
+    position: relative;
+}
+
+.dracula-blood:before {
+    border-radius: 100%;
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(238, 76, 55, 0.5); 
+    transition: all .3s linear;
+}
+      
+.dracula-blood:hover:before { 
+    background: none;
+    
+}
+.text-blood{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;    
+}
+
+.dracula-blood:hover > .text-blood {
+    opacity: 0;
+}
+
+.text-blood
+h1{
+    font-size: 60px;
+    color: #F4E1B1;
 }
