--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,10 @@ img{
 }
 
 body{
-    background: #F4E1B1;
+    /*background: radial-gradient(#f69d3c, #3f87a6);*/
+    background: linear-gradient(to top, #F2F7EA, #F2F7EA);
+    /*background: #E9E6E2;*/
+    /*background: #F4E1B1;*/
     margin: 0;
     /*background-image: url(./images/Fondo.psd) repeat ;*/
 }
@@ -42,7 +45,7 @@ p{
     padding-right: 5%;
 }
 
-.specialise{
+.parts-team{
     text-align: center;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -57,14 +60,14 @@ p{
     padding-left: 3%;
 }
 
-.spe{
+.specialty{
     width: 28%;
     cursor: pointer;
     padding-left: 2%;
     /*vertical-align: middle;*/
 }
 
-.spe:hover{    
+.specialty:hover{    
     transition: all 0.5s ease; 
     transform: translateY(-20px) scale(1.1);
 }
@@ -73,7 +76,7 @@ h5:hover {
     color:#C52039;
 }
 
-.spe
+.specialty
 h5{
     margin: 0;
     padding-bottom: 10%;
@@ -97,9 +100,7 @@ ul{
     width:65%;
     align-self: flex-end;
     text-align: right;
-    padding-left: 0;
-    
-    
+    padding-left: 0;    
 }
 
 .even {
@@ -143,20 +144,29 @@ ul{
 .img-projects{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-around;
     padding-bottom: 10%;
 }
+
 .poster{
-    width: 30%;
+    width: 80%;
+    padding-bottom: 5%;
+    cursor: pointer;
+}
+
+.poster:hover{    
+    transition: all 0.5s ease; 
+    transform: translateY(-20px) scale(1.4);
 }
 
 .footer{
     margin: 0;
     width: 100%;
     min-height: 250px;
-    background: url('./images/header-down.png') bottom no-repeat #F4E1B1;
+    /*background: url('./images/header-down.png') bottom no-repeat/* #F4E1B1*/;*/
     background-size: contain;
 }
 
@@ -167,12 +177,10 @@ ul{
     justify-content: center;
     align-items: flex-start;
     padding-top: 1%;
-    padding-bottom: 2%;
-    
-    
+    padding-bottom: 2%;    
 }
 
-.icono{
+.icon{
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -286,11 +294,12 @@ h1{
 .ourTeam{
     width: 40%;
     margin: 2%;
+    cursor: pointer;
 }
 
 h6,
 .marga {
-    font-size: 14px;
+    font-size: 12px;
     /* line-height: 1.5; */
     font-family: interstate;
     color: #3E2206;
@@ -300,7 +309,11 @@ h6,
 }
 
 .link {
-    color:#C52039;
+    color: #42787C;
     text-decoration: none;
+}
+
+.photo-footer{
+    margin: 0;
 }
 
