--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,9 @@ img{
 }
 
 body{
+    background: url('./images/background.jpg') repeat ;
     /*background: radial-gradient(#f69d3c, #3f87a6);*/
-    background: linear-gradient(to top, #F2F7EA, #F2F7EA);
+    /*background: linear-gradient(to top, #F2F7EA, #F2F7EA);
     /*background: #E9E6E2;*/
     /*background: #F4E1B1;*/
     margin: 0;
@@ -108,7 +109,7 @@ ul{
 }
 
 .section{
-    border-bottom: 1px solid #3E2206;
+    border-bottom: 1px solid #898E91;
     padding-left: 5%;
     padding-right: 5%;
 }
@@ -286,7 +287,7 @@ h1{
     display:flex;
     flex-wrap: wrap;
     padding-bottom: 10%;
-    border-bottom: 1px solid #3E2206;
+    border-bottom: 1px solid #898E91;
     justify-content: space-around;
     
 }
@@ -563,17 +564,52 @@ h6,
     }
 
     .text-team
-h1{
-    font-size: 20px;
-    color: #F4E1B1;
-}
+    h1{
+        font-size: 20px;
+        color: #F4E1B1;
+    }
 
-.allTeam{
-    
-    border-bottom: 1px solid #F1F7EB;
-    
-    
+    .allTeam{
+        border-bottom: 1px solid transparent;       
+    }
 }
 
 
+@media only screen and (min-width: 1401px) {
+
+    .logo{
+        width: 7%;
+    }
+
+    .header{
+        width: 60%;
+        padding-left: 20%;
+        padding-right: 20%;
+    }
+
+    .intro p {
+        font-size: 19px;
+        padding-left: 20%;
+        padding-right: 20%;
+    }
+
+    .two-parts{
+        width: 90%;
+        padding-left: 5%;
+    }
+
+    .section-character p{
+        align-self: center;
+        font-size: 19px;
+    }
+
 }
+
+@media only screen and (min-width: 1501px) {
+
+    .container-all{
+        width: 80%;
+        padding-left: 10%;
+    }
+}
+
