--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ img{
 }
 
 body{
+    font-family: "Georgia", serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     background: url('./images/background.jpg') repeat ;
     /*background: radial-gradient(#f69d3c, #3f87a6);*/
     /*background: linear-gradient(to top, #F2F7EA, #F2F7EA);
@@ -33,7 +34,7 @@ p{
    color: #3E2206;
    font-size: 17px;
    line-height: 25px;
-   font-family: "Georgia", serif;
+   font-family: "Georgia", serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .container-all{
@@ -167,7 +168,7 @@ ul{
     margin: 0;
     width: 100%;
     min-height: 250px;
-    /*background: url('./images/header-down.png') bottom no-repeat/* #F4E1B1*/;*/
+    /*background: url('./images/header-down.png') bottom no-repeat/* #F4E1B1*/;
     background-size: contain;
 }
 
